<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/englishShortsEmptyFragment"
        android:icon="@drawable/ic_nav_shorts"
        android:title="@string/bottom_nav_tab_english_shorts" />
    <item
        android:id="@id/gameModeEmptyFragment"
        android:icon="@drawable/ic_nav_game"
        android:title="@string/bottom_nav_tab_game_mode" />
    <item
        android:id="@id/studyModeSelectFragment"
        android:icon="@drawable/ic_nav_study"
        android:title="@string/bottom_nav_tab_mode" />
    <item
        android:id="@id/learningHistoryFragment"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/bottom_nav_tab_learning_history" />
    <item
        android:id="@id/settingFragment"
        android:icon="@drawable/ic_nav_setting"
        android:title="@string/bottom_nav_tab_settings" />
</menu>
